k8s/overlays/dev/db/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /db(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cockroachdb
                port:
                  number: 8080
